fix: adjust tray spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -98,6 +98,11 @@ button:hover {
   -gtk-icon-effect: dim;
 }
 
+#tray {
+  padding-right: 0;
+  padding-left: 15px;
+}
+
 #tray > .needs-attention {
   -gtk-icon-effect: highlight;
   background-color: #eb4d4b;
